--- a/angular/crud/frontend/src/app/components/template/header/header.component.html
+++ b/angular/crud/frontend/src/app/components/template/header/header.component.html
@@ -1,15 +1,15 @@
 <mat-toolbar class="header mat-elevation-z4">
   <span>
-    <a>
+    <a routerLink="{{ routeUrl }}">
       <img class="logo" src="assets/img/logo.png" alt="logo">
     </a>
   </span>
   <span class="title-group">
     <a>
       <i class="material-icons">
-        home
+        {{ icon }}
       </i>
-      Aplicação Crud
+      {{ title }}
     </a>
   </span>
 </mat-toolbar>
